# PaperReader

./: .gitignore  pyproject.toml
app/: __init__.py  config.py  database.py  errors.py  main.py  models.py  pagination.py  parser.py  seed.py
app/paper_parser/: README.md  __init__.py  exceptions.py  registry.py  router.py  schema.py  tasks.py  utils.py
app/paper_parser/resolvers/: __init__.py  acl.py  acm.py  arxiv.py  base.py  crossref.py  html_meta_parser.py  ieee.py  openreview.py
app/routers/: __init__.py  dev.py  papers.py  tag_groups.py  tags.py  tasks.py
database/: schema.sql
docs/: parser_refactor.md
docs/migrations/: v1_1.md
frontend/: package-lock.json  package.json
frontend/src/: style.css
frontend/src/api/: client.ts  index.ts  papers.ts  tags.ts  tasks.ts
frontend/src/components/: ConfirmDialog.vue  PaperCard.vue  PaperList.vue  PaperModal.vue  TagModal.vue
frontend/src/stores/: paper.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue
scripts/: migrate_v1_1.py  seed_db.py  start.sh
