[project]
name = "paper-reader"
version = "0.1.0"
description = "Lightweight paper management backend for AI research workflows."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "sqlmodel>=0.0.22,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
